# sitcon-camp-2026-ml

./: .gitignore  CLAUDE.md  MOBILE_OVERHAUL_PROMPT.md  README.md  RUN.md  TODO.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  student-group-id.example.csv  system-monitor-dashboard.json
apps/course2/: .env.example  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/course2/src/: App.tsx  index.css  main.tsx  palette.ts
apps/course2/src/components/: AuthGate.tsx  ClassroomLockOverlay.tsx  QuestDock.tsx  Sidebar.tsx  StationNav.tsx
apps/course2/src/lib/: auth.ts  classroom.tsx  progression.tsx  quests.ts
apps/course2/src/stations/: Placeholder.tsx  diffusion.tsx  embedding.tsx  leaderboard.tsx  lora.tsx  nextToken.tsx  orderShuffle.tsx  reference.tsx  registry.tsx  rlPlayground.tsx  (+7 more)
apps/shell/: README.md  next.config.mjs  package.json  tailwind.config.js  tsconfig.json
apps/shell/app/: globals.css  layout.tsx  page.tsx
docs/: adding-a-station.md  architecture.md  course-spec.md
docs/stations/: rl-playground-plan.md
precompute/: README.md  pyproject.toml
precompute/data/: vocab.en.txt  vocab.zh.txt
precompute/scripts/: gen_vocab.py
precompute/src/camp_precompute/: __init__.py  cli.py  diffusion.py  embedding.py  lora.py  pixel_shuffle.py  qwen.py  rl.py  rnn.py  skyfall.py  steering.py  trellis.py
prompts/: 00a-zh-tw-copy.md  01-tokenizer.md  02-embedding.md  02a-embedding-bilingual.md  03-order-shuffle.md  04-next-token.md  05-rnn-viz.md  06-transformer.md  06b-transformer-overhaul.md  08-pixel-shuffle-station.md  09-quest-leaderboard.md  DESIGN.md  DOCK-migrate-remaining-stations.md  DONE-05-rnn-viz.md  DONE-06a-transformer-interactive.md  MARP-00-foundation.md  MARP-01-content-overhaul.md  MARP-06-pixel-shuffle-loop1.md  MARP-README.md  R1-embedding-unified-space.md  R2-real-models-live-gpu.md  README.md  SERVER-live-inference.md  SERVER-multi-gpu-scale.md  validate.md
prompts/course3-panorama/: README.md
prompts/done/: 04-skyfall-gs.md  04b-next-token-context-window.md  05-trellis-text-to-3d.md  07a-rl-selfplay-opponent.md  BUG-embedding-live-input-no-request.md  DONE-01a-tokenizer-bilingual.md  MARP-05-jargon-analogy-overhaul.md  validate.md
prompts/pending-review/: FIX-hover-reveal-controls.md  FIX-jargon-inline-glossary.md  FIX-nextToken-glyph-hover.md  FIX-orderShuffle-fluency-ppl.md  FIX-rnnViz-legend-and-readout.md  FIX-transformer-input-and-heads.md  MARP-02-embedding-origin.md  MARP-03-rnn-chain.md  MARP-04-attention-multihead.md
prompts/server-runs/: README.md  diffusion-precompute.md  lora-precompute.md  skyfall-precompute.md  steering-precompute.md  trellis-precompute.md
scripts/: classroom.mjs  serve-multi.sh  serve.sh  unlock.sh
server/: .env.example  README.md  pyproject.toml
server/app/: auth.py  config.py  controls.py  groups.py  limits.py  loader.py  main.py  roster.py  schemas.py  usage.py
server/app/quests/: __init__.py  base.py  embedding.py  next_token.py  pixel_shuffle.py  rnn.py  storage.py  tokenizer.py  transformer.py
server/app/routers/: diffusion.py  embedding.py  lora.py  next_token.py  order_shuffle.py  quests.py  rnn.py  steering.py  tokenizer.py  transformer.py
server/deploy/: Caddyfile  camp-proxy.service  camp-server@.service
server/scripts/: loadtest.py  usagetui.py
slides/decks/: course2.md  handoff.md
slides/design-system/: SYSTEM.md  archetypes.md  components.md  tokens.md
slides/design-system/findings/: slide-01.md  slide-02.md  slide-03.md  slide-04.md  slide-05.md  slide-06.md  slide-07.md  slide-08.md  slide-09.md  slide-10.md  slide-11.md  slide-12.md  slide-13.md  slide-14.md  slide-15.md  slide-16.md  slide-17.md  slide-18.md  slide-19.md  slide-20.md  slide-21.md  slide-22.md  slide-23.md  slide-24.md  slide-25.md  slide-26.md  slide-27.md  slide-28.md  slide-29.md  slide-30.md  slide-31.md  slide-32.md  slide-33.md  slide-34.md  slide-35.md  slide-36.md  slide-37.md  slide-38.md  slide-39.md  slide-40.md  (+1 more)
slides/figures/: PALETTE.md  generate-attention-orderblind.py  generate-bag-of-embeddings.py  generate-bag-vs-seq.py  generate-context-accuracy.py  generate-embedding-analogy.py  generate-encoding-figures.py  generate-multihead.py  generate-pe-stripes.py  generate-pixel-shuffle-pair.py  generate-qkv.py  generate-residual.py  generate-rnn-flow.py  generate-rnn-steps.py  generate-rnn-vs-attention.py  generate-rnn-walls.py  generate-story-accident.py  generate-three-arch-glyphs.py  generate-web-placeholders.py  generate-word2vec-tasks.py
slides/marp/: .gitignore  ASSETS-TODO.md  CONVENTIONS.md  COOKBOOK.md  MASTERS.md  README.md  REPORT.md  TODO.md  marp.config.js  package.json
slides/marp/deck/: _sample.md  course2.md  part-0-front.md  part-1-loop0.md  part-2-loop1.md  part-3-loop2.md  part-4-loop3.md  part-5-loop4-resources.md
slides/marp/scripts/: build-web.mjs
slides/marp/themes/: camp-dark.css
(+83 files in other folders)
