[project]
name = "camp-precompute"
version = "0.0.0"
description = "Precompute pipeline for SITCON Camp 2026 ML stations: does heavy compute ahead of time and exports small artifacts (ONNX, JSON) the browser plays back."
readme = "README.md"
requires-python = ">=3.10"
# numpy is the only dependency for now. Heavier deps (torch, onnx, transformers)
# land when the real pipeline is built.
dependencies = [
  "numpy>=1.26",
]

[project.scripts]
camp-precompute = "camp_precompute.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/camp_precompute"]
