[project]
name = "camp-precompute"
version = "0.0.0"
description = "Precompute pipeline for SITCON Camp 2026 ML stations: does heavy compute ahead of time and exports small artifacts (ONNX, JSON) the browser plays back."
readme = "README.md"
requires-python = ">=3.10"
# numpy is the base dependency. The embedding station needs a real pretrained
# embedder (sentence-transformers → torch/transformers) plus offline word-list
# sourcing (wordfreq gives frequency-ranked words; OpenCC converts zh Simplified
# → Traditional for zh-TW). All of this is PRECOMPUTE-ONLY: it runs offline and
# exports small JSON. The browser never sees any of these.
dependencies = [
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "sentence-transformers>=3.0",
  "wordfreq>=3.1",
  "opencc>=1.1",
  # LoRA persona adapters for the Course 3 lora station: `train-lora` trains
  # them offline (once, GPU box); the live server attaches/scales them per
  # request. Weights stay gitignored under precompute/artifacts/lora/.
  "peft>=0.11",
  # Pillow encodes the Course 3 diffusion station's trajectory frames (webp).
  # Needed by BOTH the no-GPU `diffusion-sample` bake (synthetic placeholder
  # frames the dev machine ships) and the real GPU bake (decoded latents).
  "pillow>=10.0",
  # plyfile reads the Skyfall-GS fused 3DGS scenes so `camp-precompute skyfall`
  # can prune + convert them to small .splat artifacts (download + numpy only —
  # no GPU, no torch on this path).
  "plyfile>=1.0",
]

[project.optional-dependencies]
# The real diffusion trajectory bake (`camp-precompute diffusion`) runs
# SD-Turbo on the GPU box only. Kept out of the base deps so the dev machine's
# `uv sync` stays light — install with `uv sync --extra gpu` on the V100 box.
gpu = [
  "diffusers>=0.27",
  "accelerate>=0.30",
]

[project.scripts]
camp-precompute = "camp_precompute.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/camp_precompute"]
