[project]
name = "camp-server"
version = "0.0.0"
description = "Live inference server for the SITCON Camp 2026 ML stations: runs the SAME models the precompute pipeline uses, for arbitrary student input, behind schema-compatible endpoints. Fixed-input stations keep using precomputed JSON; this is the deliberate, isolated exception for custom input."
readme = "README.md"
requires-python = ">=3.10"
# camp-precompute is the model code: the server imports its builders (bigram
# tables, RNN weights, attention synthesis, embedding pipeline) so live output
# cannot drift from the precomputed artifacts. torch arrives through
# sentence-transformers but is pinned <2.8 so the same wheel still runs on the
# Tesla V100 target (sm_70) as well as the RTX 3090 (sm_86).
dependencies = [
  "camp-precompute",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "torch>=2.4,<2.8",
]

[tool.uv.sources]
camp-precompute = { path = "../precompute", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
